--- a/index.html
+++ b/index.html
@@ -44,6 +44,160 @@
                 </label>
             </div>
         </nav>
+        <section>
+            <div class="banner">
+                <div  class="banner-info">
+                    <h1><span style="color: var(--Orange, #FEA301);">Empowering</span> <br> students from small <br> age <span style="color: var(--Sky-Blue, #01ACFD);">towards vision</span></h1>
+                    <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                    <button>Enroll Now</button>
+                </div>
+                <div class="banner-img">
+                    <img src="assets/hero-kids.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
+
+    <main>
+        <section>
+            <div class="carirriculam-container">
+                <h3>Standard Curriculum</h3>
+                <div class="carirriculam-contain">
+                    <div class="carirriculam-card card-1">
+                        <img src="assets/kinder.png" alt="">
+                        <h4>Kinder (3-6) Years</h4>
+                        <p>Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <button style="color: #64C8FF;">Read More</button>
+                    </div>
+                    <div class="carirriculam-card card-2">
+                        <img src="assets/elementary.png" alt="">
+                        <h4>Elementary School</h4>
+                        <p>Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <button style="color: #F0AA00;">Read More</button>
+                    </div>
+                    <div class="carirriculam-card card-3">
+                        <img src="assets/middle.png" alt="">
+                        <h4>Middle (10-16) Years</h4>
+                        <p>Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <button style="color: #8700FF;">Read More</button>
+                    </div>
+                </div>
+                <div class="carirriculam-btn">
+                    <button><i class="fa-solid fa-angle-left"></i></button>
+                    <button><i class="fa-solid fa-angle-right"></i></button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="story-container">
+                <h3>Our Stories</h3>
+                <div class="story-all-about">
+                    <div class="story-contain contain-1">
+                        <div class="story-title">
+                            <img src="assets/story-1.png" alt="">
+                            <div>
+                                <button>November 19, 2019</button>
+                            </div>
+                        </div>
+                        <div class="story-info">
+                            <h4>A fun toddler coloring training on
+                                classroom</h4>
+                            <p>Beautiful branding for changes by Never Now in Australia.
+                                changes is a platform for open discussion in an inclusive and
+                                collaborative environment, providing the...</p>
+                        </div>
+                    </div>
+                    <div class="story-sub-about">
+                        <div class="story-contain">
+                            <div class="story-title">
+                                <img src="assets/story-2.png" alt="">
+                                <div>
+                                    <button style="background: #95B226;">November 19, 2019</button>
+                                </div>
+                            </div>
+                            <div class="story-info">
+                                <p>Find out if a school fits the
+                                    family’s needs</p>
+                            </div>
+                        </div>
+                        <div class="story-contain">
+                            <div class="story-title">
+                                <img src="assets/story-3.png" alt="">
+                                <div>
+                                    <button style="background: #5D58F0;">November 19, 2019</button>
+                                </div>
+                            </div>
+                            <div class="story-info">
+                                <p>Summer math & literacy
+                                    centres for kids</p>
+                            </div>
+                        </div>
+                        <div class="story-contain">
+                            <div class="story-title">
+                                <img src="assets/story-4.png" alt="">
+                                <div>
+                                    <button style="background: #95B226;">September 10, 2019</button>
+                                </div>
+                            </div>
+                            <div class="story-info">
+                                <p>Classroom management
+                                    techniques for new tutors</p>
+                            </div>
+                        </div>
+                        <div class="story-contain">
+                            <div class="story-title">
+                                <img src="assets/story-5.png" alt="">
+                                <div>
+                                    <button style="background: #95B226;">July 19, 2019</button>
+                                </div>
+                            </div>
+                            <div class="story-info">
+                                <p>Conversation rhymes
+                                    improve kids listening</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button>View All</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="foot-container-1">
+                <div>
+                    <img src="assets/logo.png" alt="">
+                    <h4>Kids <br> Education</h4>
+                </div>
+                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+            <div class="foot-container-2">
+                <h5>About School</h5>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Facilities</a></li>
+                    <li><a href="">Admission</a></li>
+                </ul>
+            </div>
+            <div class="foot-container-3">
+                <h4>Keep In Touch</h4>
+                <div>
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
