--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
             </div>
         </nav>
         <section>
+            <div class="marquee">
+                <div class="marquee-content">
+                    <h2>"Enroll now for quality education!"</h2>
+                    <h2>"Enroll now for quality education!"</h2>
+                    <h2>"Enroll now for quality education!"</h2>
+                    <h2>"Enroll now for quality education!"</h2>
+                    <h2>"Enroll now for quality education!"</h2>
+                    <h2>"Enroll now for quality education!"</h2>
+                </div>
+            </div>
+        </section>
+        <section>
             <div class="banner">
                 <div  class="banner-info">
                     <h1><span style="color: var(--Orange, #FEA301);">Empowering</span> <br> students from small <br> age <span style="color: var(--Sky-Blue, #01ACFD);">towards vision</span></h1>
@@ -66,25 +78,19 @@
                     <div class="carirriculam-card card-1">
                         <img src="assets/kinder.png" alt="">
                         <h4>Kinder (3-6) Years</h4>
-                        <p>Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p>Students should develop critical thinking, creativity, communication and problem-solving skills for future success.</p>
                         <button style="color: #64C8FF;">Read More</button>
                     </div>
                     <div class="carirriculam-card card-2">
                         <img src="assets/elementary.png" alt="">
                         <h4>Elementary School</h4>
-                        <p>Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p>Students should develop critical thinking, creativity, communication and problem-solving skills for future success.</p>
                         <button style="color: #F0AA00;">Read More</button>
                     </div>
                     <div class="carirriculam-card card-3">
                         <img src="assets/middle.png" alt="">
                         <h4>Middle (10-16) Years</h4>
-                        <p>Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p>Students should develop critical thinking, creativity, communication and problem-solving skills for future success.</p>
                         <button style="color: #8700FF;">Read More</button>
                     </div>
                 </div>
