--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <img src="assets/logo.png" alt="">
                     <h4>Kids <br> Education</h4>
                 </div>
-                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                <p>Our school nurtures creativity, fosters curiosity, and provides a strong foundation in academics, arts, and values for every child.</p>
             </div>
             <div class="foot-container-2">
                 <h5>About School</h5>
